@@ -1,17 +1,21 @@
 /*
- * Copyright [ 2020 - 2024 ] [Matthew Buckton]
+ * Copyright [ 2020 - 2024 ] Matthew Buckton
+ *  Copyright [ 2024 - 2025 ] MapsMessaging B.V.
  *
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ *  Licensed under the Apache License, Version 2.0 with the Commons Clause
+ *  (the "License"); you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at:
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://commonsclause.com/
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ *
+ *
  */
 
 package io.mapsmessaging.security.ssl;
@@ -23,14 +27,48 @@ import io.mapsmessaging.logging.Logger;
 import io.mapsmessaging.security.certificates.CertificateManager;
 import io.mapsmessaging.security.certificates.CertificateManagerFactory;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.security.*;
 import java.security.cert.CertificateException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import javax.net.ssl.*;
 
+/**
+ * Factory class for creating SSLContext instances configured from a given set of {@link ConfigurationProperties}.
+ * The {@link ConfigurationProperties} is expected to be a map-like structure containing configuration
+ * details for KeyStores and TrustStores used to initialize the SSLContext.
+ *
+ * Configuration properties must include:
+ *
+ * For KeyStore and TrustStore:
+ * - keyStore: Map&lt;String, Object&gt; configuration for the KeyStore
+ * - trustStore: Map&lt;String, Object&gt; configuration for the TrustStore
+ *
+ * Each store's map can include:
+ * - alias: (String, optional) alias name of the certificate. Can be null.
+ * - managerFactory: (String) KeyManagerFactory or TrustManagerFactory algorithm name.
+ * - passphrase: (String) password for the store.
+ * - type: (String) store type (e.g., "jks", "pkcs12", "pkcs11" for KeyStore).
+ * - path: (String, conditional) file location of the store. Not used if type is "pkcs11".
+ * - providerName: (String, optional) security provider name. Defaults to "SUN", can be "BC" for BouncyCastle.
+ * - configPath: (String, conditional) location of the config file for PKCS11 implementation. Only required if type is "pkcs11" for KeyStore.
+ *
+ * Specifically for TrustStore:
+ * - crlUrl: (String, optional) URL to the Certificate Revocation List (CRL). If supplied, will load the CRL to verify that the certificates are not revoked.
+ *
+ * The TrustManagerFactory instance is created based on the managerFactory property provided for the TrustStore, enabling fine-grained control over trust management strategies.
+ *
+ * Example usage:
+ * SSLContext sslContext = SSLContextFactory.createSSLContext(configurationProperties);
+ *
+ * @see SSLContext
+ */
+
 public class SslHelper {
+
 
   private SslHelper() {
   }
@@ -91,10 +129,11 @@ public class SslHelper {
 
       // Now check to see if there is a CRL configured, if so then construct the cert revocation during cert validation
       TrustManager[] trustManagers = trustManagerFactory.getTrustManagers();
-      if(config.containsKey("crlUrl")){
-        String crlUrlPath = config.getProperty("crlUrl");
-        List<TrustManager> trustManagerList = Arrays.asList(trustManagers);
-        CertificateRevocationManager certificateRevocationManager = new CertificateRevocationManager(new URL(crlUrlPath), config.getLongProperty("crlInterval", 60*60*24)); // Default daily
+      String crlUrlPath = config.getProperty("crlUrl");
+      if(crlUrlPath != null && !crlUrlPath.isEmpty()){
+        List<TrustManager> trustManagerList = new ArrayList<>(Arrays.asList(trustManagers));
+        URL crlUrl = URI.create(crlUrlPath).toURL();
+        CertificateRevocationManager certificateRevocationManager = new CertificateRevocationManager(crlUrl, config.getLongProperty("crlInterval", 60*60*24)); // Default daily
         trustManagerList.add(new CrlTrustManager(certificateRevocationManager));
         trustManagers = trustManagerList.toArray(trustManagers);
       }
